# ncdu-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
src/: browser.rs  delete.rs  exclude.rs  json_export.rs  json_import.rs  main.rs  model.rs  scan.rs  scan_parallel.rs  sink.rs  xfs_quota.rs
